--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -53,7 +53,10 @@ $header-horizontal-padding: 3%;
 $header-height: 54px;
 $header-button-margin: 12px;
 
+$xs-device-width: 543px;
 $sm-device-width: 767px;
+$md-device-width: 991px;
+$lg-device-width: 1199px;
 
 // Background colors
 $default-bg-color: $white;
