--- a/app/components/slider/slider.component.scss
+++ b/app/components/slider/slider.component.scss
@@ -19,7 +19,7 @@
     width: calc(10% - 10px);
     margin: 5px;
     background-color: white;
-    border-radius: 3px 3px 3px 3px;
+    border-radius: 3px;
     box-shadow: 0 0 3px 0px rgba(0,0,0,.2);
 
     .job-name {
