Add text-right SASS class helper & :hocho: inline style

--- a/app/components/pager/pager.component.html
+++ b/app/components/pager/pager.component.html
@@ -14,7 +14,7 @@
     <p> {{currentPage}} / {{lastPage}} </p>
   </div>
 
-  <div class="col-xs" style="text-align: right;">
+  <div class="col-xs" class="text-right">
     <a (click)="onNextPageButtonClick()" class="pagination-button">
       <i class="fa fa-chevron-right button-arrow-position" aria-hidden="true"></i>
     </a>
