Code :lipstick: & :hocho: bad comments

--- a/app/views/jobs/jobs.component.html
+++ b/app/views/jobs/jobs.component.html
@@ -7,14 +7,12 @@
     </div>
 
     <div class="col-md-6">
-      <!-- TODO: Implemente this -->
+      <p>
+        <strong>TODO: Implement Google Maps</strong>
+      </p>
     </div>
   </div>
 
-
-  <div [hidden]="true" class="row" style="background: green; height: 100px;">
-    <!-- TODO: Implemente this -->
-  </div>
 
   <pager [maxResults]="totalJobs" [currentPage]="page" (pageChange)="onPageChange($event)"></pager>
 
