--- a/app/components/my-jobs-item/my-jobs-item.component.html
+++ b/app/components/my-jobs-item/my-jobs-item.component.html
@@ -21,7 +21,7 @@
         <em>{{'assignment.status.you_hired' | translate}} {{job.jobUsers[0].user.firstName}} {{job.jobUsers[0].user.lastName}}</em>
       </p>
       <p *ngIf="section == 'history'">
-        <test-rating [rating]="job.jobUsers[0].ratingScore"></test-rating>
+        <rating [rating]="job.jobUsers[0].ratingScore"></rating>
       </p>
     </section>
 
