JS-45: Use rating directive in every place

--- a/app/views/candidates/candidates.component.html
+++ b/app/views/candidates/candidates.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="table-cell">
       <div>{{userJob.user.firstName}}</div>
-      <div>rating / jobs</div><!--TODO: when rest call is ready-->
+      <div><rating [rating]="3"></rating>(5 {{'assignment' | translate}})</div><!--TODO: when rest call is ready-->
     </div>
 
   </div>
