Initial unstyled faq page. Including proxy service, model and component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,7 +43,7 @@
               {{'menu.main.create_assignment' | translate}}
             </a>
 
-            <a href="">
+            <a routerLink="/faq/1">
               <i class="fa fa-clipboard fa-lg"></i>
               {{'menu.main.faq' | translate}}
             </a>
