Initital contact component added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
               {{'menu.main.faq' | translate}}
             </a>
 
-            <a href="">
+            <a routerLink="/contact">
               <i class="fa fa-comments fa-lg"></i>
               {{'menu.main.contact' | translate}}
             </a>
