Added icon and styled it

--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -16,6 +16,10 @@
       </p>
     </div>
 
+    <div class="envelope-icon-container">
+      <i class="fa fa-envelope fa-5x" aria-hidden="true"></i>
+    </div>
+
     <div class="material-group contact-input-container">
       <input [(ngModel)]="name" placeholder="{{'contact.form.name' | translate}}" type="text" class="material-input">
     </div>
