--- a/src/app/views/contact/contact.component.scss
+++ b/src/app/views/contact/contact.component.scss
@@ -21,10 +21,21 @@
   .textarea {
     width: 50%;
     margin: 0 auto;
-    padding-top: 20px;
+    padding-top: 30px;
     p {
       text-align: center;
       vertical-align: middle;
+    }
+  }
+
+  .envelope-icon-container {
+    margin: 0 auto;
+    width: 50%;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 50px;
+    i {
+      color: $color-primary-cerise;
     }
   }
 
