Contact post confirmation view

--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="contact-button-container">
-      <button class="btn-primary btn-medium btn" (click)="onContactButtonClick()">{{'common.submit' | translate}}</button>
+      <button class="btn-primary btn-medium btn" (click)="onContactButtonClick()">{{"common.submit" | translate}}</button>
     </div>
 
   </div>
