restyle contact confirmation view

--- a/src/app/views/contact/confirmation/contact-confirmation.component.html
+++ b/src/app/views/contact/confirmation/contact-confirmation.component.html
@@ -1,30 +1,21 @@
 <div class="container-fluid">
 
-  <div class="contact-header row">
-    <!-- All Questions -->
-    <div class="col-xs-12">
-      <h3>
-        {{"contact" | translate}}
-      </h3>
-    </div>
-  </div>
+  <div class="contact-confirmation-container">
 
-  <div class="contact-form-container">
     <div class="textarea">
-      <p>
+      <h3>
         {{"contact.confirmation.title" | translate}}
-      </p>
+      </h3>
     </div>
 
     <div class="envelope-icon-container">
-      <i class="fa fa-envelope-open fa-5x" aria-hidden="true"></i>
+      <i class="fa fa-envelope fa-5x" aria-hidden="true"></i>
     </div>
 
 
     <div class="contact-button-container">
       <button class="btn-primary btn-medium btn" (click)="onBackButtonClick()">{{"contact.confirmation.navigate.back" | translate}}</button>
     </div>
-
 
   </div>
 
