Added answer title to faq

--- a/src/app/views/faq/faq.component.html
+++ b/src/app/views/faq/faq.component.html
@@ -16,7 +16,7 @@
           <input type="checkbox" checked>
           <i></i>
           <strong>{{faq.translatedQuestion || faq.question}}</strong>
-          <p>{{faq.translatedAnswer || faq.answer}}</p>
+          <p><b>{{"faq.answer" | translate}}:</b><br>{{faq.translatedAnswer || faq.answer}}</p>
         </li>
       </ul>
     </div>
